--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,7 @@
 This repository is for my Mod Installer
 It is the database for it
+
+## Contributers of the Mod database
+* Roshan
+* StarSubject (ssdcat)
+* AarohanTheAscender
